fix screen width overflow

--- a/src/About/about.scss
+++ b/src/About/about.scss
@@ -1,9 +1,9 @@
 .descr-list {
-    width: 100vw;
+    width: 100%;
 }
 
 .description {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
