--- a/src/Food/food.scss
+++ b/src/Food/food.scss
@@ -1,5 +1,5 @@
 .food-gallery {
-    width: 100vw;
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr;
     align-content: space-evenly;
